The big fix in this commit is fully working printing support at long last. This ONLY works on IE9 right now - kudos to the IE team for an outstandingly standards compliant browser.
Lots of changes:

1. Finally got a satisfactory workaround for printing on Google Chrome where it didn't show the section headers at all.

2. Simultaneously worked around loss of section headers when printing with background colors turned off. Now output isn't pretty, but it does mostly work.

3. Finally solved (at last thank God!!!) the problem of experiences splitting themselves across pages when printing even when page-break-inside:avoid was observed by supporting browsers (Opera, IE8 and IE9). I now output a separate table per experience using CSS to semi-fix the widths of the right two columns so they all line up as though it were a single table. Unfortunately, this fix royally buggers Opera which produces highly corrupted output, but that's Opera's fault not mine. I might even submit a bug to them over this.

4. Fixed skills list running off the right of the page when printing.

5. Thanks to printing now working properly, removed all the nasty non-compliant CSS and XHTML workarounds. The outputted CV is now fully W3C standards compliant!

--- a/CVtoXHTML.css
+++ b/CVtoXHTML.css
@@ -10,14 +10,28 @@ h1 {
   text-align: center;
   font-size: 150%;
 }
+div.sectionheader {
+  margin-top: 3em;
+  position: relative;
+  color: white;
+  background-color:gray;
+}
+img.sectionheader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 h2 {
-  margin-top: 1em;
+  margin-top: 0;
   margin-bottom: 0;
   text-align: center;
-  background-color: gray;
-  color: white;
   font-weight: bold;
   font-family: Corbel, Helvetica, sans-serif;
+}
+div.introduction {
+  font-size: 110%;
+  line-height: 125%;
 }
 table {
   width: 100%;
@@ -48,6 +62,9 @@ tr > td + td + td {
 th {
   font-weight: normal;
   font-style: italic;
+}
+th._skill {
+  vertical-align: top;
 }
 th.award, th.experience {
   color: #cccccc;
@@ -117,21 +134,25 @@ table.skillsgroup td {
 table.recognitions td.when {
   min-width: 5em;
 }
-table.experiences td.title {
-  min-width: 33%;
-}
-table.experiences td.href {
-  font-size: smaller;
-  max-width: 20%;
-}
-table.experiences td.period {
-  min-width: 10em;
-}
 td._specificskill {
   font-family: Corbel, Helvetica, sans-serif;
   font-size: smaller;
   text-align: center;
   vertical-align: middle;
+}
+/* First column */
+table.experience tbody tr td.title, table.experience tbody tr td.employer {
+  width: auto;
+}
+/* Middle column */
+table.experience tbody tr td.href, table.experience tbody tr td.earnings {
+  width: 12em;
+  font-size: smaller;
+}
+/* Last column */
+table.experience tbody tr td.period, table.experience tbody tr td.location {
+  width: 10em;
+  min-width: 10em;
 }
 tr.spacer {
   height: 2em;
